Fix settings tabs not aligned

--- a/assets/css/admin-custom.scss
+++ b/assets/css/admin-custom.scss
@@ -336,7 +336,6 @@ a.sensei-custom-navigation__info {
 
 .sensei-custom-navigation__links a {
 	position: relative;
-	top: -3px;
 }
 
 .sensei-custom-navigation__links a.page-title-action,
